--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body{
   background-image: url(background.jpg);
   background-size: cover;
-  background-repeat: no-repeat;
+  /* background-repeat: no-repeat; */
 }
 
 .App {
